objects/Milestone1_Project__c.object
<CustomObject>
    <fields>
        <fullName>RIC_Target_Cost__c</fullName>
        <inlineHelpText>Le séparateur décimal est la virgule. Coût au col ou à l&apos;unité.</inlineHelpText>
        <label>Coût objectif</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIC_Task_Status__c</fullName>
        <label>Task Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Test_Consommateur__c</fullName>
        <label>Test Consommateur réalisé</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OUI</fullName>
                </value>
                <value>
                    <fullName>NON</fullName>
                </value>
                <value>
                    <fullName>A réaliser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Time__c</fullName>
        <formula>IF(RIC_Date_1er_Production__c!= null, RIC_Date_1er_Production__c,
IF(RIC_MAD_Date_Approved__c!= null, RIC_MAD_Date_Approved__c, RIC_MAD_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Tous_Actions_En_Retard__c</fullName>
        <label>Tous Actions En Retard</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Type_de_bouchon__c</fullName>
        <label>Type de bouchon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Type_de_revetement__c</fullName>
        <label>Type de revêtement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Type_de_test__c</fullName>
        <label>Type de test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quali</fullName>
                </value>
                <value>
                    <fullName>Quanti</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Unduplicated_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de projets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Validation_CDG_MKT__c</fullName>
        <label>Validation Resp. hiérarchique</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Validation_Direction_International__c</fullName>
        <label>Validation Direction International</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Validation_Resp_QRD__c</fullName>
        <label>Validation Resp. Q/R&amp;D</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RIC_Visuel__c</fullName>
        <label>Visuel</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RIC_Volume__c</fullName>
        <label>Centilisation</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Volume_bouteille__c</fullName>
        <label>Volume bouteille</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC_Volume_prvisionnel__c</fullName>
        <label>Volume prévisionnel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_TasksOpenComplete__c</fullName>
        <formula>&quot;http://chart.apis.google.com/chart?&quot;&amp;
&quot;chtt=Task+Analysis&amp;&quot;&amp;
&quot;chco=eeaa66,2299bb&amp;chs=300x225&amp;cht=p&amp;chd=t:&quot;&amp;Text(Total_Open_Task_Count__c)&amp;&quot;,&quot;&amp;Text(Total_Complete_Task_Count__c)&amp;&quot;&amp;chdl=&quot;&amp;
&quot;Open%20Tasks (&quot; &amp; TEXT (Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Complete%20Tasks (&quot; &amp; TEXT (Total_Complete_Task_Count__c) &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Text_Value__c</fullName>
        <formula>TEXT(RIC_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status_Text_Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The current status of the project.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Blocked_Task_Count__c</fullName>
        <inlineHelpText>How many tasks associated with this project are blocked? (Calculated)</inlineHelpText>
        <label>Total Blocked Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Complete_Task_Count__c</fullName>
        <inlineHelpText>How many complete tasks are there in this project?  (Calculated.)</inlineHelpText>
        <label>Nombre d&apos;Actions réalisées</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Late_Task_Count__c</fullName>
        <inlineHelpText>How many tasks associated with this project are late?  (Calculated)</inlineHelpText>
        <label>Nombre d&apos;Actions en retard</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Open_Task_Count__c</fullName>
        <inlineHelpText>How many open tasks are there in this project? (Calculated. Includes Late and Blocked tasks.)</inlineHelpText>
        <label>Total Open Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RIC Projet</label>
    <listViews>
        <fullName>RIC_All</fullName>
        <columns>RIC_Project_Number__c</columns>
        <columns>NAME</columns>
        <columns>RIC_Brand__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>RIC_MAD_Date__c</columns>
        <columns>RIC_Code_article__c</columns>
        <columns>RIC_Status__c</columns>
        <columns>RIC_Coordinateur__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>0. Tous les projets</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_En_cours</fullName>
        <columns>NAME</columns>
        <columns>RIC_Project_Number__c</columns>
        <columns>RIC_Requester_LastName__c</columns>
        <columns>RIC_Request_Date__c</columns>
        <columns>RIC_MAD_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_Status__c</field>
            <operation>equals</operation>
            <value>En cours</value>
        </filters>
        <label>3. En cours</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_En_demande</fullName>
        <columns>NAME</columns>
        <columns>RIC_Project_Number__c</columns>
        <columns>RIC_Requester_LastName__c</columns>
        <columns>RIC_Request_Date__c</columns>
        <columns>RIC_MAD_Date__c</columns>
        <columns>RIC_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_Status__c</field>
            <operation>equals</operation>
            <value>En attente de validation,En création</value>
        </filters>
        <label>1. En création + en attente validation</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_Mes_projets</fullName>
        <columns>RIC_Project_Number__c</columns>
        <columns>NAME</columns>
        <columns>RIC_Code_article__c</columns>
        <columns>RIC_Request_Date__c</columns>
        <columns>RIC_MAD_Date__c</columns>
        <columns>RIC_MAD_Date_Approved__c</columns>
        <columns>RIC_MAD_Date_Real__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RIC_Coordinateur__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RIC_Status__c</field>
            <operation>equals</operation>
            <value>En création,En attente de validation,Validé,En cours</value>
        </filters>
        <label>Mes projets</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_Mes_projets_en_cours</fullName>
        <columns>NAME</columns>
        <columns>RIC_Project_Number__c</columns>
        <columns>RIC_Coordinateur__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>RIC_Request_Date__c</columns>
        <columns>RIC_MAD_Date__c</columns>
        <columns>RIC_MAD_Date_Approved__c</columns>
        <columns>RIC_MAD_Date_Real__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RIC_Status__c</field>
            <operation>equals</operation>
            <value>En cours</value>
        </filters>
        <label>Mes projets en cours</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RIC_Mes_projets_en_retard</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>RIC_Project_Number__c</columns>
        <columns>RIC_Coordinateur__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>RIC_Request_Date__c</columns>
        <columns>RIC_MAD_Date__c</columns>
        <columns>RIC_MAD_Date_Approved__c</columns>
        <columns>RIC_MAD_Date_Real__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RIC_Status__c</field>
            <operation>equals</operation>
            <value>En cours</value>
        </filters>
        <filters>
            <field>RIC_MAD_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RIC_MAD_Date_Approved__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Mes projets en retard</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RIC_a_cloturer</fullName>
        <columns>NAME</columns>
        <columns>RIC_Project_Number__c</columns>
        <columns>RIC_Requester_LastName__c</columns>
        <columns>RIC_Request_Date__c</columns>
        <columns>RIC_MAD_Date__c</columns>
        <columns>RIC_MAD_Date_Approved__c</columns>
        <columns>RIC_MAD_Date_Real__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_Status__c</field>
            <operation>equals</operation>
            <value>A clôturer</value>
        </filters>
        <label>4. A clôturer</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_annules</fullName>
        <columns>NAME</columns>
        <columns>RIC_Project_Number__c</columns>
        <columns>RIC_Requester_LastName__c</columns>
        <columns>RIC_Request_Date__c</columns>
        <columns>RIC_MAD_Date__c</columns>
        <columns>RIC_MAD_Date_Approved__c</columns>
        <columns>RIC_MAD_Date_Real__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_Status__c</field>
            <operation>equals</operation>
            <value>Annulé</value>
        </filters>
        <label>7. Annulés</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_clotures</fullName>
        <columns>NAME</columns>
        <columns>RIC_Project_Number__c</columns>
        <columns>RIC_Requester_LastName__c</columns>
        <columns>RIC_Request_Date__c</columns>
        <columns>RIC_MAD_Date__c</columns>
        <columns>RIC_MAD_Date_Approved__c</columns>
        <columns>RIC_MAD_Date_Real__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_Status__c</field>
            <operation>equals</operation>
            <value>Clôturé</value>
        </filters>
        <label>5. Clôturés</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_refuses</fullName>
        <columns>NAME</columns>
        <columns>RIC_Project_Number__c</columns>
        <columns>RIC_Requester_LastName__c</columns>
        <columns>RIC_Request_Date__c</columns>
        <columns>RIC_MAD_Date__c</columns>
        <columns>RIC_MAD_Date_Approved__c</columns>
        <columns>RIC_MAD_Date_Real__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_Status__c</field>
            <operation>equals</operation>
            <value>Refusé</value>
        </filters>
        <label>8. Refusés</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <label>Nom du projet</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RIC Projets</pluralLabel>
    <recordTypes>
        <fullName>PER_DDO</fullName>
        <active>true</active>
        <description>Création d&apos;une référence de la société Pernod pour raisons opérationnelles &amp; logistiques</description>
        <label>PER - DDO</label>
    </recordTypes>
    <recordTypes>
        <fullName>PER_Innovation</fullName>
        <active>true</active>
        <description>Projet d&apos;innovation de la société Pernod</description>
        <label>PER - Innovation</label>
    </recordTypes>
    <recordTypes>
        <fullName>PER_OPP_ou_Kit_OPP</fullName>
        <active>true</active>
        <description>Création d&apos;un nouvel OPP ou d&apos;un nouveau kit OPP de la société Pernod</description>
        <label>PER - OPP ou Kit OPP</label>
    </recordTypes>
    <recordTypes>
        <fullName>PER_Produit_fini_standard</fullName>
        <active>true</active>
        <description>Création et lancement d&apos;un nouveau conditionnement et/ou d&apos;une nouvelle marque de la société Pernod</description>
        <label>PER - Produit fini standard fabriqué</label>
    </recordTypes>
    <recordTypes>
        <fullName>PER_Produit_fini_standard_Brand_Company</fullName>
        <active>true</active>
        <description>Lancement d&apos;un nouveau produit de négoce d&apos;une brand company par la société Pernod. Sont concernées les nouvelles références pérennes ainsi que les offres soumises à LOI.</description>
        <label>PER - Produit fini Brand Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>PER_Promotion</fullName>
        <active>true</active>
        <description>Développement d&apos;une nouvelle promotion de la société Pernod</description>
        <label>PER - Promotion fabriquée</label>
    </recordTypes>
    <recordTypes>
        <fullName>PER_Promotion_marque_BC_avec_reprise</fullName>
        <active>true</active>
        <description>Développement d&apos;une promotion d&apos;une marque de négoce distribuée par la société Pernod et conditionnée en reprise.</description>
        <label>PER - Promotion d&apos;une marque BC avec reprise</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_DDO</fullName>
        <active>true</active>
        <description>Création d&apos;une référence de la société Ricard pour raisons opérationnelles &amp; logistiques</description>
        <label>RIC - DDO</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_Innovation</fullName>
        <active>true</active>
        <description>Projet d&apos;innovation de la société Ricard</description>
        <label>RIC - Innovation</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_International</fullName>
        <active>true</active>
        <label>RIC - International</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_OPP_ou_Kit_OPP</fullName>
        <active>true</active>
        <description>Création d&apos;un nouvel OPP ou d&apos;un nouveau kit OPP de la société Ricard</description>
        <label>RIC - OPP ou Kit OPP</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_PER_International</fullName>
        <active>true</active>
        <label>PER - International</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_Produit_fini_standard</fullName>
        <active>true</active>
        <description>Création et lancement d&apos;un nouveau conditionnement et/ou d&apos;une nouvelle marque de la société Ricard</description>
        <label>RIC - Produit fini standard fabriqué</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_Produit_fini_standard_Brand_Company</fullName>
        <active>true</active>
        <description>Lancement d&apos;un nouveau produit de négoce d&apos;une brand company par la société Ricard. Sont concernées les nouvelles références pérennes ainsi que les offres soumises à LOI.</description>
        <label>RIC - Produit fini Brand Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_Promotion</fullName>
        <active>true</active>
        <description>Développement d&apos;une nouvelle promotion de la société Ricard</description>
        <label>RIC - Promotion fabriquée</label>
    </recordTypes>
    <recordTypes>
        <fullName>RIC_Promotion_marque_BC_avec_reprise</fullName>
        <active>true</active>
        <description>Développement d&apos;une promotion d&apos;une marque de négoce distribuée par la société Ricard et conditionnée en reprise.</description>
        <label>RIC - Promotion d&apos;une marque BC avec reprise</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>RIC_Coordinateur__c</fullName>
        <label>RIC_Coordinateur</label>
    </sharingReasons>
    <validationRules>
        <fullName>RIC_Delete_Phase_Validation</fullName>
        <active>true</active>
        <description>Do not allow other than the Project Coordinateur to delete an &apos;RIC Phase&apos; related to the project</description>
        <errorConditionFormula>AND(
$User.Id != RIC_Coordinateur__r.Id, 
NOT(CONTAINS($User.Username, &apos;nicolas.renault@pernod-ricard.com&apos;)), 
(RIC_Nombre_de_phases__c&lt;(PRIORVALUE(RIC_Nombre_de_phases__c)))
)</errorConditionFormula>
        <errorMessage>Seul le coordinateur du projet est autorisé à supprimer le planning.</errorMessage>
    </validationRules>
</CustomObject>